# pommedapi

./: .gitignore  AUTHORS  COPYING  Cargo.toml  Dockerfile  Makefile  Makefile.am  README.md  configure.ac
data/: Makefile.mk  functions.sh
data/templates/: output.tpl  stats.tpl  template.hbs  test.tpl
docs/: _config.yml  index.html  installation.html
docs/_layouts/: default.html
docs/examples/foaas.com/: index.html
examples/foaas.com/: pommedapi.conf
examples/foaas.com/001_version/: query.json  validate
examples/foaas.com/002_operations/: query.json
examples/foaas.com/003_anyway/: query.json  validate
examples/foaas.com/004_awesome/: query.json
examples/foaas.com/005_back/: query.json  validate
examples/foaas.com/100_nonexistent/: query.json
examples/foaas.com/100_slow_awesome/: query.json  validate
examples/foaas.com/101_expected_nonexistent/: query.json  validate
src/: config.rs  macros.rs  main.rs  pommedapi.rs  query.rs  render.rs  validate.rs
src/include/: Expect.h  Generic.h  Gfile.h  Http.h  Rendering.h  Serialize.h  Template.h  Test.h
src/lib/: Makefile.mk
src/lib/expect/: expect_main.c  expect_private.h
src/lib/generic/: generic_main.c  generic_private.h
src/lib/gfile/: gfile_main.c  gfile_private.h
src/lib/http/: http_events.c  http_main.c  http_private.h
src/lib/json/: json.azy
src/lib/rendering/: rendering_copy.c  rendering_main.c  rendering_private.h  rendering_stats.c  rendering_test.c  rendering_utils.c
src/lib/serialize/: serialize_main.c  serialize_private.h
src/lib/template/: template_main.c  template_private.h
src/lib/test/: test_main.c  test_private.h  test_run.c  test_utils.c
